Sua lai cho dung phan age va email

--- a/src/main/resources/validation-message.properties
+++ b/src/main/resources/validation-message.properties
@@ -1,5 +1,5 @@
 firstName.empty = first name not empty.
-lastName.empty = lst name not empty.
+lastName.empty = last name not empty.
 firstName.length = first name length form 5 to 45.
 lastName.length = last name length form 5 to 45.
 phoneNumber.length = phone number length form 10 to 11.
